  - Mortars inherently aim up a bit to make aiming more natural.
  - Light Mortars get jump boosters equipped instead of zoom.
  - Added dash booster to Arm Hound.
  - Blast Radius on Arcane 6-Barrel increased by 60%.
  - Added jump booster to High Altitude Impact Missiles.

AIR RAIDER
  - All support posts will reload in the background. (Not Life Vendor or guns.)
  - Response time for Cannon (Artillery Squad) strikes reduced by 75%.
  - Cannon (Artillery Squad) starts fully reloaded.
  - Cannon (Artillery Squad) changed to a rapid blitz where every shot lands within the same two seconds.
  - All Air Whale strikes reload over time instead of using credits.
  - 4x zoom added to all Air Whale strike guns.
  - Rule of God's damage increased by 100%.
  - All Limpet Guns can detonate without reloading.
  - All C-Bombs, Roller Bombs, and Beetles can detonate without reloading.
  - ZE-GUN10 can be thrown out without being locked into animation.
  - ZE-GUN10 turns as fast as ZEXR-GUN.
  - All Bunkers and Decoys reload in the background.
  - Amount of wires increased by 100% for all Wire launchers.
  - Titan starts 80% reloaded instead of 40%.
  - Durability for Titan increased by 150%.
  - Requiem Gun projectile of Titan travels 200 times faster.
  - SDL1's delivery chopper will spawn instantly.
  - All SDL1 models are 50% heavier and has 200% more grip.
  - Range of motion for Grape's cannon increased from 45 to 60 degrees.
  - Increased durability of every Power Suit by 100%.

New Weapons:
RANGER
  - AF-W | Assault Rifle
  - EX8 | Assault Rifle
  - EX16 | Assault Rifle
  - EX32 | Assault Rifle
  - EX64 | Assault Rifle
  - Sting Shot M2 | Shotgun
  - Sting Shot M3 | Shotgun
  - Raven Shot | Shotgun
  - Dragon | Shotgun
  - Dragon M2 | Shotgun
  - Dragon M3 | Shotgun
  - Dragon's Breath | Shotgun
  - Royal Flush | Sniper
  - Omega Laser Rifle | Sniper
  - Goliath ZD | Rocket Launcher
  - MLRA-X | Missile Launcher
  - CRUMBLE-J | Grenade Launcher