@@ -49,6 +49,7 @@ FENCER
 
 AIR RAIDER
   - All support posts will reload in the background. (Not Life Vendor or guns.)
+  - Reload time for Power Posts and Guard posts reduced by 50%.
   - Response time for Cannon (Artillery Squad) strikes reduced by 75%.
   - Cannon (Artillery Squad) starts fully reloaded.
   - Cannon (Artillery Squad) changed to a rapid blitz where every shot lands within the same two seconds.
@@ -59,7 +60,7 @@ AIR RAIDER
   - All C-Bombs, Roller Bombs, and Beetles can detonate without reloading.
   - ZE-GUN10 can be thrown out without being locked into animation.
   - ZE-GUN10 turns as fast as ZEXR-GUN.
-  - All Bunkers and Decoys reload in the background.
+  - All Bunkers and planted Decoys reload in the background.
   - Amount of wires increased by 100% for all Wire launchers.
   - Titan starts 80% reloaded instead of 40%.
   - Durability for Titan increased by 150%.
